--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     </head>
 
     <body>
-
+        <h1> This is h1 tag</h1>
+        <p>This is paragraph </p>
+        <h2>This is h2 tag</h2>
 
     </body>
 
