--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>  
     
-    <!-- add css style in this -->
+    
     <head>
-
+       <style>
+              h1{color:blue;font-size:300%}
+	      p{color:red}
+       </style>
 
     </head>
 
