--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1> This is h1 tag</h1>
         <p>This is paragraph </p>
         <h2>This is h2 tag</h2>
-
+        <h3>this is h3 tag</h3>   
     </body>
 
 </html>
