--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
        <style>
               h1{color:blue;font-size:300%}
+	       h2{color:green; font-size:200%} <!-- change made in remote repository -->
 	      p{color:red}
        </style>
 
