change made at line 8 on remote end in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
        <style>
               h1{color:blue;font-size:300%}
 	       h2{color:green; font-size:200%} <!-- change made in remote repository -->
+	       h3{color:yellow; font-size:150%} <!-- change made in remote repository -->
 	      p{color:red}
        </style>
 
